--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,60 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+}
+
+body{
+    background-color: #F3EFEA;
+    color: #323232;
+    font-size: 16px;
+    font-family: Open Sans, sans-serif;
+    font-weight: 400;
+    line-height: 24px;
+    word-wrap: break-word  
+}
+
+h1{
+    margin: 0;
+    color: #F6F6F6;
+    font-size: 48px;
+    font-family: Tenor Sans, sans-serif;
+    font-weight: 400;
+    line-height: 72px;
+    word-wrap: break-word
+}
+
+h2{
+    color: #57463A;
+    font-size: 48px;
+    font-family: Tenor Sans, sans-serif;
+    font-weight: 400;
+    line-height: 72px;
+    word-wrap: break-word   
+}
+
+button{
+    border: none; 
+    outline: none; 
+    background: #F6F6F6;
+    width: 328px; 
+    height: 60px;
+    color: #715B4B;
+    font-size: 16px;
+    font-family: Open Sans, sans-serif;
+    font-weight: 700;
+    line-height: 24px;
+    word-wrap: break-word   
+}
+
+.header__nav__list{
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 140px 20.5px 142px;
+    border-bottom: 1px black solid;
+}
+
 .header__nav__link{
     text-decoration: none;
     color: #323232;
@@ -8,59 +65,132 @@
     word-wrap: break-word   
 }
 
-.header__nav__list{
-    list-style-type: none;
+.custom_furniture{
+    background: linear-gradient(180deg, rgba(49.94, 49.94, 49.94, 0.50) 62%, rgba(0, 0, 0, 0) 100%);
+    background-image: url(/img/carpentry_workshop.png);   
+    height: 639px;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    margin-bottom: 160px;
 }
 
-.title{
-    color: #57463A;
-    font-size: 48px;
-    font-family: Tenor Sans, sans-serif;
-    font-weight: 400;
-    line-height: 72px;
-    word-wrap: break-word   
+.custom_furniture_title{
+    padding: 218px 448px 90px 449px;
 }
 
-.text{
-    color: black;
-    font-size: 16px;
-    font-family: Open Sans, sans-serif;
-    font-weight: 400;
-    line-height: 24px;
-    word-wrap: break-word
-}
-
-.text2{
-    color: black;
-    font-size: 24px;
-    font-family: Tenor Sans, sans-serif;
-    font-weight: 400;
-    line-height: 36px;
-    word-wrap: break-word
-}
-
-.text3{
-    color: #323232;
-    font-size: 24px;
-    font-family: Open Sans, sans-serif;
-    font-weight: 300;
-    line-height: 36px;
-    word-wrap: break-word
-}
-
-.button{
-    width: 245px; 
-    height: 60px; 
-    background: #A1B29F
-}
-
-.button_text{
+.custom_furniture_slogan{
     color: #F6F6F6;
-    font-size: 16px;
-    font-family: Open Sans, sans-serif;
+}
+
+.custom_furniture_text{
+    color: #F6F6F6;
+}
+
+.advantages{
+    padding: 0 220px 160px 134px;
+}
+
+.advantages_title{
     font-weight: 700;
-    line-height: 24px;
-    word-wrap: break-word   
+    border-bottom: 1px #715B4B solid;
+    padding-bottom: 10px;
+    margin-bottom: 30px;
+}
+
+.advantages_cards{
+    padding-top: 100px;
+    display: flex;  
+    justify-content: space-between;
+}
+
+.advantages_card{
+    display: flex;
+    flex-direction: column;
+    row-gap: 78px;
+}
+
+.portfolio{
+    margin: 0 311px 160px;
+    display: flex;
+    flex-direction: column; 
+}
+
+.portfolio_title{
+    padding: 0 0 100px 134px;
+}
+
+.portfolio_gallery{
+    margin-left: -6px;
+    margin-top: 21px;
+    display: flex;
+    gap: 16px;
+    justify-content: space-between;
+}
+
+.stages_title{
+    padding: 0 0 100px 134px;
+}
+
+.stages_table{
+    list-style-type: none;
+    display: table;
+    margin: 0 140px 160px 142px;
+}
+
+.stages_text{
+    font-weight: 300;
+    line-height: 16.48px;
+    margin-left: 26px;
+    margin-bottom: 29.5px;
+}
+
+.stages_table_item{   
+    border: 1px black solid;
+    display: table-cell;
+    width: 386px;
+}
+
+.stages_table_row{
+    display: table-row;
+}
+
+.stages_table_item h2{
+    margin: 10px 42px 0 291px;
+}
+
+.about_title{
+    padding: 0 0 100px 140px;
+}
+
+.about_images{
+    display: flex;
+    padding: 0 4px 117px 176px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.application{
+    margin: 0 353px 181px 142px;
+}
+
+.application_button{
+    margin: 100px 0 0 456px; 
+    background: #A1B29F;
+    width: 245px; 
+    color: #F6F6F6;
+}
+
+.footer{
+    background: #715B4B;
+}
+
+.footer__nav{
+    display: flex;
+    justify-content: space-between;
+    padding: 84px 140px 239px;
 }
 
 .footer__nav__item{
@@ -75,210 +205,14 @@
 
 .footer__nav__list{
     list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
 
-.span_main{
-    color: #F6F6F6;
+.footer_social_networks :first-child{
+    padding-right: 10px;
 }
 
-.button_main{
-    background: #F6F6F6;
-    width: 328px; 
-    height: 60px;
-}
 
-.button_main_text{
-    color: #715B4B;
-    font-size: 16px;
-    font-family: Open Sans, sans-serif;
-    font-weight: 700;
-    line-height: 24px;
-    word-wrap: break-word
-}
 
-.text4{
-    color: #323232;
-    font-size: 16px;
-    font-family: Open Sans, sans-serif;
-    font-weight: 400;
-    line-height: 24px;
-    word-wrap: break-word
-}
 
-.title2{
-    color: #323232;
-    font-size: 16px;
-    font-family: Open Sans, sans-serif;
-    font-weight: 700;
-    line-height: 24px;
-    word-wrap: break-word    
-}
-
-.text5{
-    color: #323232;
-    font-size: 16px;
-    font-family: Open Sans, sans-serif;
-    font-weight: 300;
-    line-height: 16.48px;
-    word-wrap: break-word
-}
-
-.button_main_text2{
-    color: #4C6D77;
-    font-size: 16px;
-    font-family: Open Sans, sans-serif;
-    font-weight: 700;
-    line-height: 24px;
-    word-wrap: break-word   
-}
-
-.text6{
-    color: #323232;
-    font-size: 16px;
-    font-family: Open Sans, sans-serif;
-    font-weight: 400;
-    line-height: 16.48px;
-    word-wrap: break-word
-}
-
-.button2{
-    width: 328px; 
-    height: 60px; 
-    background: #A1B29F
-}
-
-.text7{
-    color: black;
-    font-size: 18px;
-    font-family: Open Sans, sans-serif;
-    font-weight: 300;
-    line-height: 27px;
-    word-wrap: break-word
-}
-
-.circle{
-    background: #A1B29F;
-    width: 60px;
-    height: 60px;
-    clip-path: circle(50%);
-}
-
-.circle_text{
-    text-align: center;
-    color: #F6F6F6;
-    font-size: 24px;
-    font-family: Open Sans, sans-serif;
-    font-weight: 700;
-    line-height: 36px;
-    word-wrap: break-word   
-}
-
-.text8{
-    color: #323232;
-    font-size: 18px;
-    font-family: Open Sans;
-    font-weight: 700;
-    line-height: 27px;
-    word-wrap: break-word
-}
-
-.text9{
-    color: #323232;
-    font-size: 16px;
-    font-family: Open Sans;
-    font-weight: 300;
-    line-height: 24px;
-    word-wrap: break-word
-}
-
-.title3{
-    color: #57463A;
-    font-size: 48px;
-    font-family: Tenor Sans;
-    font-weight: 400;
-    line-height: 57.60px;
-    word-wrap: break-word
-}
-
-.text10{
-    color: #323232;
-    font-size: 18px;
-    font-family: Open Sans;
-    font-weight: 300;
-    line-height: 27px;
-    word-wrap: break-word   
-}
-
-.text11{
-    color: #57463A;
-    font-size: 48px;
-    font-family: Tenor Sans;
-    font-weight: 400;
-    line-height: 57.60px;
-    word-wrap: break-word
-}
-
-.text12{
-    color: #323232;
-    font-size: 18px;
-    font-family: Open Sans;
-    font-weight: 300;
-    line-height: 18.54px;
-    word-wrap: break-word
-}
-
-.body{
-    background-color: #F3EFEA;
-}
-
-.custom_furniture{
-    background: linear-gradient(180deg, rgba(49.94, 49.94, 49.94, 0.50) 62%, rgba(0, 0, 0, 0) 100%);
-    background-image: url(/img/carpentry_workshop.png);   
-    height: 639px;
-    background-size: cover;   
-}
-
-.footer{
-    background: #715B4B;
-}
-
-.main{
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.50) 58%, rgba(0, 0, 0, 0) 100%);
-    background-image: url(/img/master_classes_wood1.png);
-    height: 601px;
-    background-size: cover;
-}
-
-.second_life{  
-    background-image: url(/img/master_classes_wood2.png);
-    height: 508px;
-    background-size: cover;
-}
-
-.service_1{
-    background: #E3DACE;
-}
-
-.service_2{
-    background: #D4CDC3;
-}
-
-.founders{
-    background: #EBEEEB;
-}
-
-/*.line{
-    transform: rotate(90deg); 
-    /*transform-origin: 0 0; 
-    border: 1px #C4C4C4 solid;
-    width: 643px;
-    padding: 2343 957 4003 483;
-}
-*/
-.techniques_list{
-    list-style-type: none;
-}
-
-.stages_list{
-    list-style-type: none;
-}
